Removed all (hopefully) customization. Added admin user creation to seeds.rb.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -279,6 +279,10 @@ p#login-intro {
     .sections {
       display: none;
     }
+    .cover-page-graph-container {
+      margin: 0 auto;
+      width: 900px;
+    }
   }
 }
 
