--- a/app/views/assessments/_results.html.erb
+++ b/app/views/assessments/_results.html.erb
@@ -1,5 +1,6 @@
 <div id="assessment-<%= assessment.id %>-result" class="assessment-result print-page">
   <div class="assessment-score"><%= assessment.score(user) %></div>
+  <div class="assessment-min-score"><%= assessment.min_score %></div>
   <div class="assessment-max-score"><%= assessment.max_score %></div>
   <div class="cover-page print-page">
     <div class="assessment-title"><%= assessment.title %></div>
@@ -13,31 +14,28 @@
         </div>
       <% end %>
     </div>
-    <div style="margin: 0 auto; width: 900px;">
-      <canvas class="cover-page-graph" height="<%= ((assessment.sections.length * 50) + 600 ).to_s %>px" width="900px"></canvas>
+    <div class="cover-page-graph-container">
+      <canvas class="cover-page-graph" height="<%= ((assessment.sections.length * 50) + 500 ).to_s %>px" width="900px"></canvas>
     </div>
   </div>
-  <div class="assessment-executive-summary">
+  <div class="assessment-executive-summary print-page">
     <h2>Executive Summary</h2>
       <% unless assessment.executive_summary.blank? %>
-        <%= assessment.executive_summary.gsub(/\[Company Name\]/, user.company_name).gsub(/\[Company Nickname\]/, user.company_name).html_safe %>
+        <%= assessment.executive_summary.html_safe %>
       <% end %>
   </div>
-  <div class="assessment-overall-result">
+  <div class="assessment-overall-result print-page">
     <h2>Overall Results</h2>
-    <div class="assessment-graph">
-      <canvas class="assessment-graph-canvas" height="100px" width="600px"></canvas>
-    </div>
     <%= get_result(assessment) %>
   </div>
   <% assessment.sections.each do |section| %>
-    <div class="section-result">
+    <div class="section-result print-page">
+      <div class="gauge-image">
+        <%= image_tag("gauge.png") %>
+      </div>
       <div class="section-score"><%= section.score(user) %></div>
       <div class="section-max-score"><%= section.max_score %></div>
       <h2><%= section.title %></h2>
-      <div class="section-graph">
-        <canvas class="section-graph-canvas" height="100px" width="600px"></canvas>
-      </div>
       <%= get_result(section) %>
     </div>
   <% end %>
