--- a/app/views/assessments/results.html.erb
+++ b/app/views/assessments/results.html.erb
@@ -1,1 +1,1 @@
-<%= render "results", :assessment => @assessment, :user => @client %>
+<%= render "results", :assessment => @assessment, :user => @current_user %>
