No more duplicate image uploads. Removed some unnecessary explicit returns.

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Business Model Institute Assessment Admin Panel</title>
+  <title>Assessment Tool Admin Panel</title>
   <meta name="description" content="" />
   <meta name="author" content="Mojo Media Labs" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
