--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Business Model Institute</title>
+  <title>Assessment Tool</title>
   <meta name="description" content="" />
   <meta name="author" content="Mojo Media Labs" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,7 @@
 <body>
   <div id="container">
     <header id="main-header">
-      <%= link_to image_tag("bmi-logo.png", :id => "logo"), root_path %>
+      <%= link_to image_tag("logo.png", :id => "logo"), root_path %>
       <nav id="main-nav">
         <ul>
           <% if @current_user %>
