--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 <body>
   <div id="container">
     <header id="main-header">
-      <%= link_to image_tag("logo.png", :id => "logo"), root_path %>
+      <%= link_to image_tag("http://placehold.it/250x55&text=Company+Logo", :id => "logo"), root_path %>
       <nav id="main-nav">
         <ul>
           <% if @current_user %>
