--- a/app/views/assessments/index.html.erb
+++ b/app/views/assessments/index.html.erb
@@ -1,10 +1,9 @@
 <h1>Assessments</h1>
-  <% @assessments.each do |assessment| %>
-    <div class="assessment">
-      <h2><%= link_to assessment.title, assessment_path(assessment, :client_id => client.id) %></h2>
-      <div class="assessment-status"><strong>Status:</strong> <%= get_status(client, assessment) %></div>
-      <div class="assessment-description"><%= raw assessment.description %></div>
-    </div>
-  <% end %>
-  <p><%= link_to "Click here for a printable summary of all assessments you've has completed.", summary_assessments_path %></p>
-</div>
+<% @assessments.each do |assessment| %>
+  <div class="assessment">
+    <h2><%= link_to assessment.title, assessment_path(assessment) %></h2>
+    <div class="assessment-status"><strong>Status:</strong> <%= get_status(assessment) %></div>
+    <div class="assessment-description"><%= raw assessment.description %></div>
+  </div>
+<% end %>
+<p><%= link_to "Click here for a printable summary of all assessments you've has completed.", summary_assessments_path %></p>
