--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -28,15 +28,8 @@
       </fieldset>
     <% end %>
   </div>
-  <!-- this ID is NOT semantic! -->
   <div id="login-image">
     <img src="http://placehold.it/440x336" alt="placeholder image" title="placeholder image" />
   </div>
 </div>
-<p id="login-intro">The Business Model Institute was created to help small-to-mid-sized businesses assess and improve their business models through a structured, proven process.</p>
-<!-- move this to main JS file -->
-<script>
-  $(function() {
-    $("#password").val("");
-  });
-</script>
+<p id="login-intro">Short description of assessment goes here.</p>
